# EFIGenie

./: .editorconfig  .gitignore  .gitmodules  4L80ETransController-Explaned.txt  4L80ETransController.bin.bak  CMakeLists.txt  CMakePresets.json  README.md  envinit.sh  tune.json  tune.jsonlz
Control/: CMakeLists.txt
Control/UnitTests/: gmock_initialize.cpp  packages.config  stdafx.h
Control/libs/CrankCamDecoders/src/: Gm24xDecoder.cpp
Control/libs/CrankCamDecodersMockedObjects/include/: MockCrankCamDecoder.h
Control/libs/EmbeddedIOServices/include/: Interpolation.h  Packed.h  ScalarVariable.h  ScalarVariableType.h
Control/libs/EmbeddedIOServices/include/Service/: IService.h  (+6 more)
Control/libs/EmbeddedIOServices/src/: Interpolation.cpp  ScalarVariable.cpp
Control/libs/EmbeddedIOServicesMockedObjects/include/: MockAnalogService.h  MockBooleanOutputService.h  MockDigitalService.h  MockPwmService.h  MockStepperOutputService.h  MockTimerService.h
Control/libs/EngineControl/: CMakeLists.txt
Control/libs/EngineControlMockedObjects/: CMakeLists.txt
Control/libs/EngineControlMockedObjects/include/: MockAfrService.h  MockCylinderAirTemperatureService.h  MockCylinderAirmassService.h  MockIgnitionConfig.h  MockInjectionConfig.h  MockInjectorGramService.h  MockInjectorTimingService.h  MockOutputOperation.h
Control/libs/EngineControlUnitTests/: CMakeLists.txt
Control/libs/EngineControlUnitTests/src/: AfrService_Map_EthanolTests.cpp  CylinderAirTemperatureService_IAT_ECT_BiasTests.cpp  CylinderAirmassService_SDTests.cpp  FuelPumpServiceTests.cpp  IgnitionConfig_StaticTests.cpp  IgnitionSchedulingServiceTests.cpp  InjectorGramServiceTests.cpp  InjectorGramServiceWrapper_DFCOTests.cpp  InjectorTimingServiceTests.cpp  Operation_EngineScheduleIgnitionTests.cpp  PistonEngineServiceTests.cpp  PrimeService_StaticPulseWidthTests.cpp
Control/libs/Reluctor/: CMakeLists.txt
Control/libs/Reluctor/src/: Gm24xReluctor.cpp  Universal2xReluctor.cpp
Control/libs/ReluctorMockedObjects/: CMakeLists.txt
Control/libs/ReluctorMockedObjects/include/: MockReluctor.h
Control/libs/TransmissionControl/: CMakeLists.txt
EngineManagement/: CMakeLists.txt  EngineManagement.sln
EngineManagement/EngineManagement/: AfrService_Map_Ethanol.cpp  AfrService_Map_Ethanol.h  AfrService_Static.h  BooleanInputService.cpp  BooleanInputService.h  BooleanInputService_Static.h  BooleanOutputService.cpp  BooleanOutputService.h  CallBackGroup.h  EngineCoolantTemperatureService.cpp  EngineCoolantTemperatureService.h  EngineCoolantTemperatureServiceLinear.cpp  EngineCoolantTemperatureServiceLinear.h  EngineCoolantTemperatureService_Analog.cpp  EngineCoolantTemperatureService_Analog.h  EngineCoolantTemperatureService_Static.h  EngineManagement.vcxitems  EngineManagement.vcxitems.filters  EthanolService_Analog.cpp  EthanolService_Analog.h  EthanolService_Pwm.cpp  EthanolService_Pwm.h  EthanolService_Static.h  Factory.h  FloatInputService_AnalogPolynomial.h  FloatInputService_FrequencyPolynomial.h  FloatInputService_Static.h  FloatOutputService_PwmPolynomial.h  FloatOutputService_StepperPolynomial.h  FuelPumpService.cpp  FuelPumpService.h  FuelPumpService_Analog.cpp  FuelPumpService_Analog.h  FuelPumpService_Pwm.cpp  FuelPumpService_Pwm.h  FuelTrimServiceWrapper_InterpolatedTable.cpp  FuelTrimServiceWrapper_InterpolatedTable.h  FuelTrimServiceWrapper_MultiChannel.cpp  FuelTrimServiceWrapper_MultiChannel.h  FuelTrimService_InterpolatedTable.h  (+145 more)
EngineManagement/UnitTests/: AfrService_Map_EthanolTests.cpp  BooleanOutputServiceTests.cpp  EngineCoolantTemperatureService_AnalogTests.cpp  EthanolService_AnalogTests.cpp  EthanolService_PwmTests.cpp  FloatInputService_AnalogPolynomialTests.cpp  FloatInputService_FrequencyPolynomialTests.cpp  FuelPumpServiceTests.cpp  IgnitionSchedulingServiceTests.cpp  IgnitorServiceTests.cpp  InjectorServiceTests.cpp  IntakeAirTemperatureService_AnalogTests.cpp  MapService_AnalogTests.cpp  MockAfrService.h  MockAnalogService.h  MockBooleanOutputService.h  MockDecoder.h  MockDigitalService.h  MockEngineCoolantTemperatureService.h  MockEthanolService.h  MockFloatInputService.h  MockFuelPumpService.h  MockFuelTrimService.h  MockIgnitorService.h  MockInjectorService.h  MockIntakeAirTemperatureService.h  MockMapService.h  MockPistonEngineIgnitionConfig.h  MockPistonEngineInjectionConfig.h  MockPrimeService.h  MockPwmService.h  MockSensorService.h  MockTimerService.h  MockTpsService.h  MockVoltageService.h  PistonEngineIgnitionConfig_StaticTests.cpp  PistonEngineIgnitionSchedulingServiceTests.cpp  PistonEngineServiceTests.cpp  PrimeService_StaticPulseWidthTests.cpp  TpsService_AnalogTests.cpp  (+4 more)
EngineManagement/libs/CrankCamDecoders/: CMakeLists.txt
EngineManagement/libs/CrankCamDecoders/src/: Gm24xDecoder.cpp
EngineManagement/libs/CrankCamDecodersMockedObjects/: CMakeLists.txt
EngineManagement/libs/EmbeddedIOServices/: CMakeLists.txt
EngineManagement/libs/EmbeddedIOServices/include/: Interpolation.h
EngineManagement/libs/EmbeddedIOServices/src/: Interpolation.cpp
EngineManagement/libs/EmbeddedIOServicesMockedObjects/: CMakeLists.txt
EngineManagement/libs/EmbeddedIOServicesMockedObjects/include/: MockAnalogService.h  MockDigitalService.h  MockFloatInputService.h  MockPwmService.h  MockStepperOutputService.h
EngineManagement/libs/EngineControlMockedObjects/: CMakeLists.txt
EngineManagement/libs/EngineControlUnitTests/: CMakeLists.txt
EngineManagement/libs/EngineManagement/: CMakeLists.txt
EngineManagement/libs/EngineManagementMockedObjects/: CMakeLists.txt
EngineManagement/libs/EngineManagementUnitTests/: CMakeLists.txt
EngineManagement/libs/TransmissionControl/: CMakeLists.txt
test/: CMakeLists.txt
test/include/: MockOutputOperation.h
test/src/: AcceptanceTest.cpp  AcceptanceTestExpander.cpp  AfrService_Map_EthanolTests.cpp  CommunicationHandler_OBD2PIDTests.cpp  CylinderAirTemperatureService_IAT_ECT_BiasTests.cpp  FuelPumpServiceTests.cpp  InjectorGramServiceWrapper_DFCOTests.cpp  Operation_EngineScheduleIgnitionTests.cpp  Operation_EngineScheduleInjectionTests.cpp
(+810 files in other folders)
